--- a/views/upload.ejs
+++ b/views/upload.ejs
@@ -12,7 +12,7 @@
     <h1 id="title"><%= title %></h1>
 </div>
 
-<div class="pure-g container">
+<div class="container">
 
     <form class="pure-form pure-form-aligned">
         <fieldset>
