--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,57 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title><%= title %></title>
+    <title>VINTERN</title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
+    <link href="https://fonts.googleapis.com/css?family=Lobster|Raleway" rel="stylesheet">
   </head>
-  <body>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
+  <body background="http://i.imgur.com/gPwBEeI.png">
+    <div><font color="white"><center><h1>Welcome to <b>Vintern</b></h1></center></font></div>
+    <hr>
+    <br>
+    <br>
+    <center>
+    <table border = 5 bordercolor = white align = center>
+    <th colspan = 14><font color="white">IMAGE #1</font></th>
+    <tr>
+        <th colspan = 4><img src="https://www.w3schools.com/html/pic_mountain.jpg" alt="Image10" style="width:304px;height:228px;"></th>
+    </tr>
+     <th colspan = 14><font color="white">IMAGE #2</font></th>
+    <tr>
+        <th colspan = 4><img src="https://www.w3schools.com/html/pic_mountain.jpg" alt="Image10" style="width:304px;height:228px;"></th>
+    </tr>
+    <th colspan = 14><font color="white">IMAGE #3</font></th>
+    <tr>
+        <th colspan = 4><img src="https://www.w3schools.com/html/pic_mountain.jpg" alt="Image10" style="width:304px;height:228px;"></th>
+    </tr>
+     <th colspan = 14><font color="white">IMAGE #4</font></th>
+    <tr>
+        <th colspan = 4><img src="https://www.w3schools.com/html/pic_mountain.jpg" alt="Image10" style="width:304px;height:228px;"></th>
+    </tr>
+     <th colspan = 14><font color="white">IMAGE #5</font></th>
+    <tr>
+        <th colspan = 4><img src="https://www.w3schools.com/html/pic_mountain.jpg" alt="Image10" style="width:304px;height:228px;"></th>
+    </tr>
+     <th colspan = 14><font color="white">IMAGE #6</font></th>
+    <tr>
+        <th colspan = 4><img src="https://www.w3schools.com/html/pic_mountain.jpg" alt="Image10" style="width:304px;height:228px;"></th>
+    </tr>
+    <th colspan = 14><font color="white">IMAGE #7</font></th>
+    <tr>
+        <th colspan = 4><img src="https://www.w3schools.com/html/pic_mountain.jpg" alt="Image10" style="width:304px;height:228px;"></th>
+    </tr>
+    <th colspan = 14><font color="white">IMAGE #8</font></th>
+    <tr>
+        <th colspan = 4><img src="https://www.w3schools.com/html/pic_mountain.jpg" alt="Image10" style="width:304px;height:228px;"></th>
+    </tr>
+     <th colspan = 14><font color="white">IMAGE #9</font></th>
+    <tr>
+        <th colspan = 4><img src="https://www.w3schools.com/html/pic_mountain.jpg" alt="Image10" style="width:304px;height:228px;"></th>
+    </tr>
+     <th colspan = 14><font color="white">IMAGE #10</font></th>
+    <tr>
+        <th colspan = 4><img src="https://www.w3schools.com/html/pic_mountain.jpg" alt="Image10" style="width:304px;height:228px;"></th>
+    </tr>
+</table>
   </body>
 </html>
